[gd_scene load_steps=2 format=3 uid="uid://efx6ggikarhf"]

[ext_resource type="Script" uid="uid://ba4oiq6wvwvu6" path="res://ui/game/hud/core/respawn_hud.gd" id="1_tn2th"]

[node name="RespawnHUD" type="CanvasLayer" groups=["respawn_ui"]]
script = ExtResource("1_tn2th")

[node name="Root" type="Control" parent="."]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2

[node name="Panel" type="Panel" parent="Root"]
layout_mode = 0
offset_right = 200.0
offset_bottom = 80.0

[node name="VBox" type="VBoxContainer" parent="Root/Panel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
alignment = 1

[node name="TitleLabel" type="Label" parent="Root/Panel/VBox"]
layout_mode = 2
text = "You died"
horizontal_alignment = 1
vertical_alignment = 1

[node name="TimerLabel" type="Label" parent="Root/Panel/VBox"]
layout_mode = 2
text = "Respawn in 10.0"
horizontal_alignment = 1
vertical_alignment = 1

[node name="RespawnButton" type="Button" parent="Root/Panel/VBox"]
layout_mode = 2
text = "Воскрешение на кладбище"

[node name="SpiritsAidButton" type="Button" parent="Root/Panel/VBox"]
layout_mode = 2
text = "Spirit’s Aid"
